PatronSaga/Coreografía/kubernetes/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ms-auth
  labels:
    app: ms-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-auth
  template:
    metadata:
      labels:
        app: ms-auth
    spec:
      containers:
        - name: ms-auth-pod
          image: 282865065290.dkr.ecr.us-east-2.amazonaws.com/ms_auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
