PatronSaga/Coreografía/kubernetes/delivery-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ms-delivery
  labels:
    app: ms-delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-delivery
  template:
    metadata:
      labels:
        app: ms-delivery
    spec:
      containers:
        - name: ms-delivery-pod
          image: 282865065290.dkr.ecr.us-east-2.amazonaws.com/ms_delivery:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3040
