PatronSaga/Coreografía/kubernetes/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ms-gateway
  labels:
    app: ms-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-gateway
  template:
    metadata:
      labels:
        app: ms-gateway
    spec:
      containers:
        - name: ms-gateway-pod
          image: 282865065290.dkr.ecr.us-east-2.amazonaws.com/ms_gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
