PatronSaga/Coreografía/kubernetes/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ms-mongo
  labels:
    app: ms-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-mongo
  template:
    metadata:
      labels:
        app: ms-mongo
    spec:
      containers:
        - name: ms-mongo-pod
          image: mongo
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
