PatronSaga/Coreografía/kubernetes/order-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ms-order
  labels:
    app: ms-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-order
  template:
    metadata:
      labels:
        app: ms-order
    spec:
      containers:
        - name: ms-order-pod
          image: 282865065290.dkr.ecr.us-east-2.amazonaws.com/ms_order:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
