PatronSaga/Coreografía/kubernetes/payment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ms-payment
  labels:
    app: ms-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-payment
  template:
    metadata:
      labels:
        app: ms-payment
    spec:
      containers:
        - name: ms-payment-pod
          image: 282865065290.dkr.ecr.us-east-2.amazonaws.com/ms_payment:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3020
