PatronSaga/Coreografía/kubernetes/store-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-ms-store
  labels:
    app: ms-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-store
  template:
    metadata:
      labels:
        app: ms-store
    spec:
      containers:
        - name: ms-store-pod
          image: 282865065290.dkr.ecr.us-east-2.amazonaws.com/ms_store:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3030
