PatronSaga/Coreografía/kubernetes/auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  type: ClusterIP
  selector:
    app: ms-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
