PatronSaga/Coreografía/kubernetes/delivery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-svc
spec:
  type: ClusterIP
  selector:
    app: ms-delivery
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3040
