PatronSaga/Coreografía/kubernetes/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  type: ClusterIP
  selector:
    app: ms-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
