PatronSaga/Coreografía/kubernetes/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  type: ClusterIP
  selector:
    app: ms-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
