PatronSaga/Coreografía/kubernetes/order-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  type: ClusterIP
  selector:
    app: ms-order
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
