PatronSaga/Coreografía/kubernetes/payment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
spec:
  type: ClusterIP
  selector:
    app: ms-payment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3020
