PatronSaga/Coreografía/kubernetes/rabbit-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: rabbitmq
  replicas: 4
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      serviceAccountName: rabbitmq
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8-management
          ports:
            - containerPort: 4369
              name: discovery
            - containerPort: 5672
              name: amqp
          volumeMounts:
            - name: data
              mountPath: /var/lib/rabbitmq
              readOnly: false
            - name: config-file
              mountPath: /config/
            - name: plugins-file
              mountPath: /etc/rabbitmq/
      volumes:
        - name: config-file
          emptyDir: {}
        - name: plugins-file
          emptyDir: {}
        - name: config
          configMap:
            name: rabbitmq-config
            defaultMode: 0755
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "gp2"
        resources:
          requests:
            storage: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  clusterIP: None
  ports:
    - port: 4369
      targetPort: 4369
      name: discovery
    - port: 5672
      targetPort: 5672
      name: amqp
  selector:
    app: rabbitmq
