PatronSaga/Coreografía/kubernetes/store-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-svc
spec:
  type: ClusterIP
  selector:
    app: ms-store
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
